@@ -151,6 +151,8 @@ And now, in mostly alphabetical order, the scripts:
   current Debian keyring on your system. [gnupg, debian-keyring, 
   libdigest-md5-perl]
 
+- getbuildlog: Download package build logs from Debian auto-builders. [wget]
+
 - grep-excuses: grep the update_excuses.html file to find out what is
   happening to your packages. [libterm-size-perl, wget]
 
