@@ -376,6 +376,10 @@
 # A colon separated list of extra keyrings to read.
 # DSCVERIFY_KEYRINGS=""
 
+##### getbuildlog
+#
+# No variables currently
+
 ##### grep-excuses
 # 
 # This specifies a default maintainer name or email to hunt for
