@@ -75,6 +75,8 @@
 	fr:fr/dpkg-genbuilddeps.fr.1 add_fr:add_fr/translator_man.add
 [type:man] ../scripts/dscverify.1 \
 	fr:fr/dscverify.fr.1 add_fr:add_fr/translator_man.add
+[type:man] ../scripts/getbuildlog.1 \
+	fr:fr/getbuildlog.fr.1 add_fr:add_fr/translator_man.add
 [type:man] ../scripts/grep-excuses.1 \
 	fr:fr/grep-excuses.fr.1 add_fr:add_fr/translator_man.add
 [type:pod] ../scripts/licensecheck.pl \
