@@ -1,0 +1,35 @@
+.TH GETBUILDLOG 1 "Debian Utilities" "DEBIAN" \" -*- nroff -*-
+.SH NAME
+getbuildlog \- download build logs from Debian auto\-builders
+.SH SYNOPSIS
+\fBgetbuildlog\fR \fIpackage\fR
+[\fIversion\-pattern\fR]
+[\fIarchitecture\-pattern\fR]
+.SH DESCRIPTION
+\fBgetbuildlog\fR downloads build logs of \fIpackage\fR from Debian
+auto\-builders. It downloads build logs of all versions and for all
+architectures if \fIversion\-pattern\fR and \fIarchitecture\-pattern\fR are
+not specified or empty, otherwise only build logs whose versions match
+\fIversion-pattern\fR and build logs whose architectures match
+\fIarchitecture-pattern\fR will be downloaded. The version and architecture
+patterns are interpreted as extended regular expressions as described in
+\fBgrep\fR(1).
+.SH OPTIONS
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+Show usage information and examples.
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Show version and copyright information.
+.SH EXAMPLES
+.TP
+getbuildlog hello 2\\.2\-1 amd64
+Download amd64 build log for hello version 2.2\-1.
+.TP
+getbuildlog glibc "" mips.*
+Download mips(el) build logs of all glibc versions.
+.TP
+getbuildlog wesnoth .*bpo.*
+Download all build logs of backported wesnoth versions.
+.SH AUTHOR
+Written by Frank S. Thomas <fst@debian.org>.
