@@ -4,6 +4,8 @@ devscripts (2.10.29) UNRELEASED; urgency=low
     long options"
   * debdiff: Don't apply patches when extracting a Format 3.0 (quilt) source
     package, to minimise noise in the diffs (Closes: #475506)
+  * getbuildlog: New script from Frank S. Thomas to download build logs for
+    a given package (Closes: #483169)
   * mergechanges: Allow changes files with Formats of 1.7 and 1.8 to be merged,
     by removing the Checksums-* fields from the Format: 1.8 files. The result
     will be a valid Format: 1.7 changes file. (Closes: #481585)
